clusters/talos-ottawa/apps/media/app/qb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: gluetun
        image: ghcr.io/qdm12/gluetun:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: gluetun-config
          mountPath: /gluetun
      - name: gluetun-qb-port-sync
        image: ghcr.io/bjw-s-labs/gluetun-qb-port-sync:latest
        volumeMounts:
        - name: qb-port-sync-config
          mountPath: /config
        command: ["/bin/sh"]
        args: ["-c", "echo '*/5 * * * * /app/gluetun-qb-port-sync' > /config/crontab && exec /entrypoint.sh"]
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
        - name: webui
          containerPort: 8080
          protocol: TCP
        - name: torrenting
          containerPort: 6881
          protocol: TCP
        - name: torrenting-udp
          containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: downloads-volume
          mountPath: /downloads
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: qbittorrent-downloads
      - name: gluetun-config
        emptyDir: {}
      - name: qb-port-sync-config
        emptyDir: {}
